ProtectedInterceptor was only catching methods with LockMode.WRITE
This was because @Protected had a default value of LockMode.WRITE. Solved
by removing the default value and instead introducing an additional
annotation (@Lock) that specifies the lock mode.